--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+user.profile.image.path=images/users
 
 
 
