--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 user.profile.image.path=images/users/
-product.image.path=images/product/
+product.profile.image.path=images/product/
 
 
 
