My  24 Dec 2023 commit JWT auth half completed ,but mapping is not working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 user.profile.image.path=images/users/
 product.profile.image.path=images/product/
+jwt.secret=OurJWTToken
 
 
 
