--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.servlet.multipart.max-request-size=10MB
 user.profile.image.path=images/users/
 product.profile.image.path=images/product/
 jwt.secret=OurJWTToken
+admin.role.id=mynameismanmohankaushik
+normal.role.id=mynameismanmohansharma
 
 
 
